@@ -27,8 +27,8 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-api:2.19.0'
     compile 'org.apache.logging.log4j:log4j-core:2.19.0'
     compile 'com.oracle.database.jdbc:ojdbc8:21.7.0.0'
-    compile 'org.springframework:spring-beans:5.3.15'
-    compile 'org.springframework:spring-jdbc:5.3.15'
+    compile 'org.springframework:spring-beans:5.3.16'
+    compile 'org.springframework:spring-jdbc:5.3.16'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
