@@ -2,8 +2,8 @@
 #
 APITOKEN=`cat api.token`
 
-HTVCF_SPEC="5.1.1_HTVCF_RGD"
-HTVCF_LOC="5.1.1_HTVCF_RGD.vcf.gz"
+HTVCF_SPEC="5.4.0_HTVCF_RGD"
+HTVCF_LOC="5.4.0_HTVCF_RGD.vcf.gz"
 HTVCF_FILE="${HTVCF_SPEC}=@${HTVCF_LOC}"
 echo "$HTVCF_FILE"
 
