@@ -1,3 +1,6 @@
+Nov 11, 2022
+  updated script to submit HTVCF data
+
 Nov 10, 2022
   VariantVcfGenerator - added export of EVA rn7 in last column and rs ids in ID column
 
